updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>im a web developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>im from Perth, Western Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like playing video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream Job is to become a Web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>i live in wellard</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>because i love creating new ideas</p>
     </section>
 
     <footer id="footer">
