updated my details

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>My dream Job is to become a Web developer</p>
       <h1>Where do you live?</h1>
-      <p>i live in wellard</p>
+      <p>I live in wellard</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>because i love creating new ideas</p>
     </section>
